--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <title>Flask Plotlyjs Example</title>
   <link rel="icon" href="data:,">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="gauge" class="chart"></div>
       </div>
     </div>
   </div>
